--- a/build.gradle
+++ b/build.gradle
@@ -60,6 +60,10 @@ repositories {
         url = 'https://maven.minecraftforge.net'
     }
     maven {
+        name = 'Minecraft'
+        url = 'https://libraries.minecraft.net'
+    }
+    maven {
         name = 'Minecraft libraries'
         url = 'https://libraries.minecraft.net'
     }
