Revert to Minecraft 1.21.11 + Forge 61.0.8 with Piston Meta repo

--- a/build.gradle
+++ b/build.gradle
@@ -64,8 +64,8 @@ repositories {
         url = 'https://libraries.minecraft.net'
     }
     maven {
-        name = 'Minecraft libraries'
-        url = 'https://libraries.minecraft.net'
+        name = 'Mojang'
+        url = 'https://piston-meta.mojang.com'
     }
     flatDir {
         dir 'libs'
